...
    <string name="children_travelling_terms_details">الأطفال من سن 4 سنوات تصدر لهم تذكرة كاملة\n لا يتم تخصيص مقعد للأطفال أقل من 4 سنوات و لا يتم دفع اي رسوم علي انتقالهم بشرط ان يكونوا بمصاحبه ذويهم</string>
    <string name="bags_terms">الحقائب و الشحن</string>
    <string name="bags_terms_details">الحقائب يتم تحميلها بالأتوبيس على مسئوليه أصحابها وينطبق عليها الأحكام القياسية للنقل البرى مسموح لكل راكب بعدد 2 حقيبة متوسطة الحجم علي الا يزيد الوزن الاجمالي عن 35 كيلوجرام وذلك بالإضافة الي حقيبة يد صغيره يمكن وضعها في الرف المخصص في الاتوبيس اعلي الكراسي او في المساحة اسفل كرسي الراكب\n قد تطبق رسوم شحن على اية حقيبة او شحنة اضافية مع المسافر طبقا لرسوم ا
    <string name="payment_terms_details">يتم إلغاء الحجز من الموقع او تطبيق الشركة الإنجليزية للنقل والرحلات على الموبايل تلقائيا فى حالة عدم الدفع فى خلال ساعتين من زمن الحجز مع خدمة فوري او ماشابه شركات الدفع مع العلم انه سوف يتم وضع الراكب في القائمة السوداء التي تخص الشركة اذا تم ذلك الاجراء لاكثر من ثلاث مرات \n في حاله الحجز الالكتروني يرجي التأكد من جميع البيانات الظاهرة على شاشه الحجز الخا
    <string name="reservation_time_change_terms_details">في حالة عدم الحضور للسفر بالرحلة المحددة بالتذكرة تصبح التذكرة لاغية ولا يحق للمسافر طلب رد قيمة التذكرة او استخدامها على رحلة اخري لا يحق طلب استرجاع قيمة تذكره غير موجودة او مفقودة او تم سرقتها أذا تبين عدم قيام المسافر بالحجز\n لا يحق طلب استرجاع قيمة تذكره مدفوعة نقدا او من خلال وسائل الدفع المختلفة على ان يتم رد القيمة المستحقة الى رصيد
    <string name="travelling_instructions">تعليمات السفر</string>
    <string name="accept">قبول</string>
    <string name="must_accept_terms">يجب عليك قبول الشروط والأحكام</string>
    <string name="log_in_to_your_existing_account">سجل دخول الي حسابك الحالي</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="welcome_back">مرحبًا بك مرة أخرى!</string>
    <string name="log_in">تسجيل الدخول</string>
    <string name="phone_number_not_valid">رقم غير صحيح يجب ان يبدأ ب 01 ويتكون من 11 رقم</string>
...
